@@ -1616,7 +1616,7 @@
 	"mostlinked-summary": "",
 	"mostlinkedcategories": "Most linked-to categories",
 	"mostlinkedcategories-summary": "",
-	"mostlinkedtemplates": "Most linked-to templates",
+	"mostlinkedtemplates": "Most transcluded pages",
 	"mostlinkedtemplates-summary": "",
 	"mostcategories": "Pages with the most categories",
 	"mostcategories-summary": "",
