@@ -1744,7 +1744,7 @@
 	"nrevisions": "Used as link text in [[Special:FewestRevisions]].\n\nThe link points to the page history (action=history).\n\nParameters:\n* $1 - number of revisions",
 	"nviews": "This message is used on [[Special:PopularPages]] to say how many times each page has been viewed.\n\nPreceded by the page title, like: Page title ($1 views)\n\nParameters:\n* $1 - the number of views",
 	"nimagelinks": "Used on [[Special:MostLinkedFiles]] to indicate how often a specific file is used.\n\nParameters:\n* $1 - number of pages\nSee also:\n* {{msg-mw|Ntransclusions}}",
-	"ntransclusions": "Used on [[Special:MostLinkedTemplates]] to indicate how often a template is in use.\n\nParameters:\n* $1 - number of pages\nSee also:\n* {{msg-mw|Nimagelinks}}",
+	"ntransclusions": "Used on [[Special:MostTranscludedPages]] to indicate how often a template is in use.\n\nParameters:\n* $1 - number of pages\nSee also:\n* {{msg-mw|Nimagelinks}}",
 	"specialpage-empty": "Used on a special page when there is no data. For example on [[Special:Unusedimages]] when all images are used.",
 	"lonelypages": "{{doc-special|LonelyPages}}",
 	"lonelypages-summary": "{{doc-specialpagesummary|lonelypages}}",
@@ -1778,7 +1778,7 @@
 	"mostlinked-summary": "{{doc-specialpagesummary|mostlinked}}",
 	"mostlinkedcategories": "{{doc-special|MostLinkedCategories}}",
 	"mostlinkedcategories-summary": "{{doc-specialpagesummary|mostlinkedcategories}}",
-	"mostlinkedtemplates": "{{doc-special|MostLinkedTemplates}}",
+	"mostlinkedtemplates": "{{doc-special|MostTranscludedPages}}",
 	"mostlinkedtemplates-summary": "{{doc-specialpagesummary|mostlinkedtemplates}}",
 	"mostcategories": "{{doc-special|MostCategories}}",
 	"mostcategories-summary": "{{doc-specialpagesummary|mostcategories}}",
