@@ -430,7 +430,7 @@ $specialPageAliases = array(
 	'Mostinterwikis'            => array( 'MostInterwikis' ),
 	'Mostlinked'                => array( 'MostLinkedPages', 'MostLinked' ),
 	'Mostlinkedcategories'      => array( 'MostLinkedCategories', 'MostUsedCategories' ),
-	'Mostlinkedtemplates'       => array( 'MostLinkedTemplates', 'MostUsedTemplates' ),
+	'Mostlinkedtemplates'       => array( 'MostTranscludedPages', 'MostTranscluded', 'MostLinkedTemplates', 'MostUsedTemplates' ),
 	'Mostrevisions'             => array( 'MostRevisions' ),
 	'Movepage'                  => array( 'MovePage' ),
 	'Mycontributions'           => array( 'MyContributions' ),
